--- a/src/components/styles/counter.css
+++ b/src/components/styles/counter.css
@@ -1,15 +1,19 @@
-.counter-container{
+.counter{
     width: 90%;
-        max-width: 400px;
-        padding: 80px 0px;
-        padding-bottom: 40px;
-        border-top-left-radius: 90px;
-        border-top-right-radius: 90px;
-        border-bottom-left-radius: 90px;
-        border-bottom-right-radius: 90px;
-        margin: auto;
-        margin-bottom: 20px;
-        background-color: #002343;
+    max-width: 400px;
+    padding: 80px 0px;
+    padding-bottom: 40px;
+    border-top-left-radius: 90px;
+    border-top-right-radius: 90px;
+    border-bottom-left-radius: 90px;
+    border-bottom-right-radius: 90px;
+    margin: auto;
+    margin-top: 20px;
+    background-color: #002343;
+}
+.counter-container{
+    background-color: snow;
+    border: 6px solid #002343;
 }
 
 .display {
@@ -25,8 +29,7 @@
 }
 .reset {
     background-color: snow;
-    width: 15%;
-    padding: 20px 0px;
+    padding: 10px 5px;
     border-radius: 50%;
     border: 1px solid grey;
     margin-top: 10px;
@@ -42,15 +45,23 @@
     margin-top: 50px;
     margin-left: 60px;
 }
-.warning {
-    position: absolute;
-    background-color: rgba(47, 79, 79, 0.877);
-    color: snow;
-    top: 10%;
+.warning-container {
+    position: fixed;
+    top: 0;
+    width: 100%;
     display: none;
-    left: 8%;
-    border-radius: 10px;
-    padding: 30px;
+    max-width: 400px;
+    height: 100vh;
+    margin: auto;
+    background-color: transparent;
+}
+.warning {
+    background-color: rgba(47, 79, 79, 0.877);
+    padding: 20px;
+    width: 90%;
+    margin: auto;
+    margin-top: 100px;
+    max-width: 400px;
 }
 
 .warning p {
