--- a/src/components/styles/tally.css
+++ b/src/components/styles/tally.css
@@ -1,39 +1,42 @@
 .container{
     
     color: #f0b400;
+    background-color: #002343;
     width: 100%;
     max-width: 400px;
     margin: auto;
     
 }
 header{
-    background-color: #002343;
+    
     padding: 20px;
     padding-bottom: 40px;
     display: grid;
-    margin-bottom: 70px;
-    grid-gap: 120px;
+    grid-gap: 110px;
     grid-template-columns: 2fr 1fr;
+   
 }
 header h1{
     margin-top: 40px;
 }
 header span{
     color: snow;
+    display: block;
 }
 
 header p {
-
+    margin-bottom: 30px;
     color: snow;
 }
-#home{
-    display: block;
-}
-#arrow{
-    display: none;
-}
+
+
 header p{
     color: snow;
+}
+.header h2{
+    color: snow;
+    margin-bottom: 20px;
+    text-align: center;
 }
 .sect{
     padding: 20px;
@@ -41,14 +44,11 @@ header p{
 }
 .sect .form-control{
     background-color: #fbb117;
-    position: absolute;
-    top: 26%;
-    width: 100%;
-    max-width: 400px;
-    left: 0;
+    margin-top: -70px;
     padding: 20px;
-    padding-top: 30px;
-    border-radius: 10px;
+    margin-left: -9px;
+    width: 105%;
+    border-radius: 20px;
  }
  .sect .form-control input{
     border: none;
@@ -73,19 +73,19 @@ header p{
     font-size: 12px;
  }
  .tally-wrapper{
-    margin-top: 50px;
+    margin-top: 20px;
  }
+ 
  .tally-container{
     background-color: #002343;
     padding: 25px;
     color: snow;
     display: grid;
-    grid-gap: 50px;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 2.5fr 0.5fr;
     border-radius: 15px;
  }
  .tally-container h3{
-    font-size:16px;
+    font-size:14px;
  }
  .target{
     padding: 10px 20px;
