--- a/src/components/styles/counter.css
+++ b/src/components/styles/counter.css
@@ -27,23 +27,26 @@
     margin: auto;
     margin-bottom: 20px;
 }
-.reset {
+.reset-n-led{
+    display: grid;
+    width: 100%;
+    grid-template-columns: 1.5fr 0.5fr;
+}
+.circle {
     background-color: snow;
-    padding: 10px 5px;
+    padding: 10px 10px;
     border-radius: 50%;
-    border: 1px solid grey;
-    margin-top: 10px;
-    margin-left: 200px;
+    border: 3px solid grey;
+    margin: 10px 25px;
+    
 }
 
 .count {
     background-color: snow;
-    width: 50%;
-    padding: 65px 0px;
+    padding: 55px 55px;
     border-radius: 50%;
-    border: 2px solid grey;
-    margin-top: 50px;
-    margin-left: 60px;
+    border: 5px solid grey;
+    margin: 45px 100px;
 }
 .warning-container {
     position: fixed;
@@ -86,3 +89,11 @@
     border-radius: 15px;
     background-color:#002343;
 }
+.led {
+    border-radius: 50%;
+    padding: 10px 10px;
+    box-shadow: 0px 0px 3px black;
+    margin: 10px 25px;
+    background-image: -webkit-linear-gradient(top, #f9a004 0%, #e0ac45 50%, #ead698 100%);
+}
+
