--- a/src/components/styles/counter.css
+++ b/src/components/styles/counter.css
@@ -89,11 +89,28 @@
     border-radius: 15px;
     background-color:#002343;
 }
-.led {
+.led-btn {
+
     border-radius: 50%;
     padding: 10px 10px;
     box-shadow: 0px 0px 3px black;
     margin: 10px 25px;
-    background-image: -webkit-linear-gradient(top, #f9a004 0%, #e0ac45 50%, #ead698 100%);
+    background-image: -webkit-linear-gradient(top, #f9a004 0%, #e0ac45 40%, #ffd300 100%);
 }
-
+small{
+    display: block;
+    font-size: 9px;
+    margin: 0 25px;
+}
+.led{
+    zoom: 1.5;
+    padding: 15px;
+    color: black;
+    text-align: right;
+    border: 3px solid gray;
+    border-radius: 10px;
+    width: 90%;
+    margin: auto;
+    margin-bottom: 20px;
+    background-image: -webkit-linear-gradient(top, #13fB04 10%, #58e343 100% );
+}
