added error message function

--- a/src/components/styles/counter.css
+++ b/src/components/styles/counter.css
@@ -97,7 +97,7 @@
     margin: 10px 25px;
     background-image: -webkit-linear-gradient(top, #f9a004 0%, #e0ac45 40%, #ffd300 100%);
 }
-small{
+.small{
     display: block;
     font-size: 9px;
     margin: 0 25px;
