--- a/src/components/styles/counter.css
+++ b/src/components/styles/counter.css
@@ -42,11 +42,19 @@
 }
 
 .count {
-    background-color: snow;
-    padding: 55px 55px;
+    background-color: lightgrey;
+    padding: 20px 28px;
     border-radius: 50%;
-    border: 5px solid grey;
-    margin: 45px 100px;
+    border: 4px solid grey;
+   margin: 40px 45px;
+   font-size: 1.5rem;
+   font-weight: bolder;
+   color: #f9a004;
+}
+.grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
 }
 .warning-container {
     position: fixed;
