--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -14,6 +14,27 @@
     animation-iteration-count: infinite;
     animation-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955);
 }
+.errorPage  img{
+  margin: 50px 0;
+
+}
+.errorPage{
+  text-align:center;
+}
+.testError button{
+  padding: 30px;
+  color: snow;
+  border: 2px solid #f0b400;
+  background-color: #002343;
+  border-radius: 10px;
+}
+.testError{
+  width: 80%;
+  max-width: 500px;
+  margin: auto;
+
+  margin-top: 80px;
+}
 @keyframes color {
     0%{
         background-color: #002343;
