--- a/src/components/styles/tally.css
+++ b/src/components/styles/tally.css
@@ -1,20 +1,20 @@
 .container{
-    
+
     color: #f0b400;
     background-color: #002343;
     width: 100%;
     max-width: 400px;
     margin: auto;
-    
+
 }
 header{
-    
+
     padding: 20px;
     padding-bottom: 40px;
     display: grid;
     grid-gap: 110px;
     grid-template-columns: 2fr 1fr;
-   
+
 }
 header h1{
     margin-top: 40px;
@@ -23,10 +23,28 @@ header span{
     color: snow;
     display: block;
 }
-
+.header .name{
+  display: grid;
+  grid-template-columns:1fr 1fr;
+  grid-gap: 20px;
+}
 header p {
     margin-bottom: 30px;
     color: snow;
+}
+.set-count{
+  margin-top: 90px;
+  display: grid;
+  grid-gap: 5px;
+  grid-template-columns: 1fr 1fr;
+
+}
+.set-count label{
+  font-size: 10px;
+}
+.set-count input{
+  width: 50px;
+  height: 4vh;
 }
 
 
@@ -54,7 +72,7 @@ header p{
     border: none;
     outline: none;
     background-color: transparent;
-    color: snow;  
+    color: snow;
  }
  .sect .form-control input::placeholder{
     color: snow;
@@ -66,7 +84,7 @@ header p{
     border: none;
     border-radius: 15px;
     padding: 10px 25px;
- } 
+ }
  .sect .form-control #error{
     color: red;
     display: none;
@@ -75,7 +93,7 @@ header p{
  .tally-wrapper{
     margin-top: 20px;
  }
- 
+
  .tally-container{
     background-color: #002343;
     padding: 25px;
